--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">            
 </head>
 <body>
-    
+    <section class="top">
+        <div class="half1">
+            <h1>HELLO, I'M <br><span class="name">ROB DAVIDSON</span></h1>
+        <p>A full stack allaround designer that placerat<br> in massa consectetur</p>
+    <a class="button1" href="">Hire Me</a>
+        </div>
+    <div class="half1"> <img src="images/do not use this pic.png" alt=""></div>
+    </section>
+    <section class="middle">
+        <div class="half2">
+            <img src="images/do not use this pic2.png" alt="">
+        </div>
+        <div class="half2" id="text">
+            <h1>ABOUT</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <a class="button1" href="">Download CV</a>
+        </div>
+    </section>
+    <section class="bottom">
+        <h1><span class="name">Latest</span> Working Project</h1>
+        <div class="half3" id="firstpic">
+            <img src="images/image 4.png" alt="">
+            <h6>Power-x-gym (gym website)</h6>
+            <p>Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry.
+                </p>
+        </div>
+        <div class="half3">
+            <img src="images/image 5.png" alt="">
+            <h6>Creative Agency</h6>
+            <p>Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry.
+                </p>
+        </div>
+        <div class="half3">
+            <img src="images/image 8.png" alt="">
+            <h6>Hard Rock Music</h6>
+            <p>Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry.</p>
+        </div>
+    </section>
+    <section></section>
 </body>
 </html>
