--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 printing and typesetting industry.</p>
         </div>
     </section>
-    <section></section>
+
+        <div class="background"> 
+            <span><h3 class="inner-text">WORK INQUIRY</h3></span>
+            <span><a href="#" class="button1">Let's Chat</a></span>
+        </div>    
+    
 </body>
 </html>
